# cleverbot

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.md.orig  bot.cpp  bot.h  config  connection.cpp  connection.h  logger.cpp  main.cpp
src/: bot.cpp  bot.h  connection.cpp  httplib.h  logger.cpp  main.cpp
